@@ -1,0 +1,12 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 100x100
+        RenderText {#text} at (0,0) size 50x50
+          text run at (0,0) width 50: "a"
+        RenderInline {SPAN} at (0,0) size 100x50 [color=#0000FF]
+          RenderText {#text} at (0,50) size 100x50
+            text run at (0,50) width 100: ".."
+        RenderText {#text} at (0,0) size 0x0
