@@ -1,0 +1,5 @@
+<!-- The correct rendering is a single 50x50 black box on the first line and a 100x50 black box on
+     the following line. -->
+<div style="font-family: ahem; font-size: 50px; width: 100px;">
+    a <span dir="ltr" style="color: blue;">..</span>
+</div>
